# gd-webview

./: .gitignore  CMakeLists.txt  README.md  mod.json
src/: main.cpp  render.cpp  render.hpp  subprocess.cpp  view.cpp  view.hpp
webview/: CMakeLists.txt
